<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/park_id"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/park_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/choose_park_id" />

    <LinearLayout
        android:id="@+id/arrived_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/reservation_time"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/reservation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/reservation_time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/confirmation_info"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/confirmation_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|number"
            android:prompt="@string/confirmation_info" />
    </LinearLayout>

    <ImageView
        android:id="@+id/confirmation_iamge"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="start"
        android:src="@drawable/qr_image"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/reserved_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/reservation_time"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/park_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/park_position"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/park_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/park_fee"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/park_grace_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/park_grace_period"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/park_confirmation_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/park_confirmation_info"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/park_loacation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/park_description"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_ok"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>