<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:stretchColumns="*" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/table_line" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/first_column"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@android:color/holo_purple"
            android:gravity="center"
            android:text="@string/parking_slot" >
        </TextView>

        <TextView
            android:id="@+id/second_column"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@android:color/holo_purple"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:text="@string/parking_slot_statue" >
        </TextView>

        <TextView
            android:id="@+id/third_column"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@android:color/holo_purple"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:text="@string/parking_slot_driverid" >
        </TextView>

        <TextView
            android:id="@+id/fourth_column"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@android:color/holo_purple"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:text="@string/parking_driver_often" >
        </TextView>

        <TextView
            android:id="@+id/fifth_column"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@android:color/holo_purple"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:text="@string/parking_slot_time" >
        </TextView>
    </TableRow>

</TableLayout>